--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Alexander L. Hayes
-email: your-email@domain.com
+email: alexander@batflyer.net
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -27,10 +27,16 @@ github_username:  batflyer
 
 # Build settings
 markdown: kramdown
+highlighter: pygments
+
+#kramdown:
+#  syntax_highlighter: pygments
+
 theme: minima
 gems:
   - jekyll-feed
   - json
+  - jekyll-sitemap
 exclude:
   - Gemfile
   - Gemfile.lock
