--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,6 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# variables are referenced with {{ site.email }} or {{ site.title }}
 
 title: Alexander L. Hayes
 email: alexander@batflyer.net
@@ -28,9 +16,6 @@ github_username:  batflyer
 # Build settings
 markdown: kramdown
 highlighter: pygments
-
-#kramdown:
-#  syntax_highlighter: pygments
 
 theme: minima
 gems:
