--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ github_username:  batflyer
 markdown: kramdown
 highlighter: pygments
 
-theme: minima
+theme: minimal-mistakes-jekyll
 gems:
   - jekyll-feed
   - json
