Changing the syntax highlighter to use rogue instead of pygments, to comply with GitHub support.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ github_username:  batflyer
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rogue
 
 theme: minimal-mistakes-jekyll
 gems:
