The hello world blog as moved to its own directory. Modified blog post. New categories for blogging. Updated index blurb and added an updates section.

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ github_username:  batflyer
 markdown: kramdown
 highlighter: rogue
 
-theme: minimal-mistakes-jekyll
+theme: minima
 gems:
   - jekyll-feed
   - json
