Changed the highlighter option to a syntax_highlighter option. This should fix the problem with rogue vs pygments.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,10 @@ github_username:  batflyer
 
 # Build settings
 markdown: kramdown
-highlighter: rogue
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rogue
 
 theme: minima
 gems:
