--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@
 title: Alexander L. Hayes
 email: alexander@batflyer.net
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Alexander L. Hayes is a Computer Science Ph.D. Student advised by Professor Sriraam
+  Natarajan at the University of Texas at Dallas. Research interests are broadly in
+  machine learning and knowledge representation.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://batflyer.net" # the base hostname & protocol for your site
 twitter_username: alexanderlhayes
 github_username:  batflyer
 
