--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
 title: "Alexander L. Hayes"
-description: "Alexander L. Hayes Computer Science Ph.D. Student at the University of Texas at Dallas."
+description: "Alexander L. Hayes &mdash; Health Informatics Ph.D. Student with the Proactive Health Informatics Group (ProHealth) at the School of Informatics, Computing, and Engineering (SICE) at Indiana University, Bloomington (IU)."
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
@@ -18,7 +18,7 @@ permalink: /:categories/:title/
 kramdown:
   toc_levels: 1..2
 highlighter: rouge
-gems:
+plugins:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
@@ -36,6 +36,12 @@ owner:
   avatar: bio-photo.jpg # 160x160 px image for author byline
   disqus-shortname:
 
+# Collections
+
+collections:
+  classes:
+    permalink: /teaching/:title/
+    output: true
 
 include:
   - .htaccess
