--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ owner:
   google:
     ad-client:
     ad-slot:
+    analytics: UA-99296192-1
   bio:
   avatar: bio-photo.jpg # 160x160 px image for author byline
   disqus-shortname:
