🎨 `/blog/` overhaul, navigation, and new post
Add `/blog/` landing page with a list of blog posts
Add `/blog/` to `_data/footer.yml` and `_data/navigation.yml`
Add category: blog tags to entries in `_posts/`
Add new post: `arduino-temperature-study.md`
Add `images/feature/redboard_feature.jpg`
Add `images/teaser/redboard_teaser.jpg`

This adds redirect links to be backwards-compatible with the
previous blog link system. Blogs can now be viewed from a
dedicated blog page, and a new blog post was added.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,9 @@
 # Site navigation links
 
+- title: "Blog"
+  url: /blog/
+  excerpt: Short thoughts worth sharing
+  image:
 - title: "CV"
   url: /cv/
   excerpt: Education, Experience, and Publications
