✨ Page names, breadcrumbs, and animations
Add new headshot photo (`images/Alexander_Hayes.png`)
Add 404 page
Add better titles to cv, teaching, and home pages
  e.g. "Teaching" -> "Alexander L. Hayes - Teaching"
Add bigger breadcrumb font for easier reading
Add animations to home page and reorganize content

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@ fonts/* linguist-vendored
 js/plugins/* linguist-vendored
 js/vendor/* linguist-vendored
 js/main.js linguist-vendored
-_sass/vendor/* linguist-vendored
+_sass/* linguist-vendored
