✨ Publications and bug fixes
Fixing several instances where urls still referred to batflyer

Fix GitHub hyperlinks in `_posts/2016-12-30-network-of-...`
Fix GitHub hyperlinks in `_posts/2019-04-08-arduino-te-...`

Creating a 'publications' collection and displaying them

Fix `_data/publications.yml` pointing to batflyer GitHub
Add most recent publication link in `_pages/home.md`
Add `_pages/publications.md` landing page (not currently
  included in navigation options)
Add `_publications/2017-12-04-construction-of-...` item with
  some details of the publication and further reading
Fix `_sass/_animations.scss` from having high animation times
Add `_sass/_image-fade.scss` with sass for feathering images
Add `@include "image-fade";` to `css/main.css`
Add paper screenshot to `images/publications/kcap2017...`

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ collections:
   classes:
     permalink: /teaching/:title/
     output: true
+  publications:
+    permalink: /publications/:title/
+    output: true
 
 include:
   - .htaccess
