--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@ fonts/* linguist-vendored
 js/plugins/* linguist-vendored
 js/vendor/* linguist-vendored
 js/main.js linguist-vendored
+talks/* linguist-vendored
 _sass/* linguist-vendored
 _sass/_tile-list.scss linguist-vendored=false
 _sass/_tutorials.scss linguist-vendored=false
