--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
   url: /cv/
   excerpt: Education, Experience, and Publications
   image:
-- title: "Teaching"
-  url: /teaching/
-  excerpt: Office Hours and Classes
+- title: "Open Source"
+  url: /open-source/
+  excerpt: Open source software
   image:
