--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ owner:
     analytics: UA-99296192-1
   bio: "Ph.D. Student at Indiana University Bloomington"
   avatar: bio-photo.jpg # 160x160 px image for author byline
-  disqus-shortname:
+  disqus-shortname: hayesall-com
 
 # Collections
 
