✨ Publications tab, _publications updates, publications/
Add "Publications" entry to footer/navigation.yml
Add srlearn poster and workshop presentation to publications.yml
Add publication.liquid layout
Start using _publications/ entry with publication layout
Add srlearn publication entry in _publications
Add pdf copies of papers in publications/ directory

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,10 @@
   url: /blog/
   excerpt: Short thoughts worth sharing
   image:
+- title: "Publications"
+  url: /publications/
+  excerpt: Conference and Workshop Publications
+  image:
 - title: "CV"
   url: /cv/
   excerpt: Education, Experience, and Publications
