--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,9 +1,11 @@
 # Footer navigation links
 
 - title: "Home"
-  url: /
+  url: /#
 - title: "Blog"
   url: /blog/
+- title: "Publications"
+  url: /publications/
 - title: "CV"
   url: /cv/
 - title: "Teaching"
