--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,17 @@
+- authors: Alexander L. Hayes
+  year: 2020
+  title: "srlearn: A Python Library for Gradient-Boosted Statistical Relational Models"
+  venue: Ninth International Workshop on Statistical Relational AI
+  date: February 7, 2020
+  location: New York City, NY, USA
+  code: https://github.com/hayesall/srlearn-StarAI-2020-workshop/
+  pdf: /publications/srlearn-python-library.pdf
+- authors: Alexander L. Hayes
+  year: 2019
+  title: "srlearn: A Python Library for Gradient-Boosted Statistical Relational Models"
+  date: December 5, 2019
+  venue: HCI Fest Poster Presentation
+  location: Bloomington, IN, USA
 - authors: Alexander L. Hayes, Mayukh Das, Phillip Odom, and Sriraam Natarajan
   year: 2017
   title: "User Friendly Automatic Construction of Background Knowledge: Mode Construction from ER Diagrams"
@@ -6,7 +20,7 @@
   location: Austin, TX, USA
   doi: https://doi.org/10.1145/3148011.3148027
   code: https://github.com/starling-lab/Walk-ER/
-  pdf: https://starling.utdallas.edu/assets/pdfs/KCAP17Mode.pdf
+  pdf: /publications/construction-background-knowledge.pdf
 - authors: Alexander Hayes, Savannah Smith, Ciabhan Connelly, Devendra Dhami, and Sriraam Natarajan
   year: 2016
   title: "Predicting Drug-Drug Interactions: Combining Machine Learning and Natural Language Processing"
