✨ Add WIP overview pages

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -6,7 +6,9 @@
   url: /blog/
 - title: "Publications"
   url: /publications/
+- title: "Software"
+  url: /software/
 - title: "CV"
   url: /cv/
-- title: "Open Source"
-  url: /open-source/
+- title: "Teaching"
+  url: /teaching/
